# takram-triangulation

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  triangulation.sln
config/: dependencies.xcconfig  product.xcconfig  product_debug.xcconfig  product_release.xcconfig  product_test.xcconfig  project.xcconfig  project_debug.xcconfig  project_release.xcconfig  test.xcconfig
example/Configurations/: Common.xcconfig  Debug.xcconfig  Release.xcconfig
example/Example/: AppDelegate.h  AppDelegate.mm  Info.plist  example.cc  example.h  main.m
example/Example.xcodeproj/: project.pbxproj
example/Example.xcodeproj/xcshareddata/xcschemes/: Example.xcscheme
example/Example/Base.lproj/: MainMenu.xib
example/ExampleTests/: Info.plist
include/takram/triangulation/: delaunay_triangulator.h  line.h  line_iterator.h  point.h  triangle.h  triangle_iterator.h  triangulator_base.h  voronoi_triangulator.h
lib/triangle/: triangle.c
sample/: product.xcconfig
sample/triangulation/: app.cc  app.h  main.cc
sample/triangulation.xcodeproj/project.xcworkspace/xcshareddata/: triangulation.xcscmblueprint
samples/: Info.plist  product.xcconfig
samples/Triangulation.xcodeproj/: project.pbxproj
samples/triangulation/: app.cc  app.h  main.cc
samples/triangulation.xcodeproj/: project.pbxproj
samples/triangulation.xcodeproj/xcshareddata/xcschemes/: Application.xcscheme
script/: build.sh  copy_headers.sh  header.sh  make_gitignore.sh  setup.sh
scripts/: build.sh  build_glog.sh  build_gtest.sh  cpplint.sh  gitignore.sh  make_gitignore.sh  setup.sh
src/takram/: triangulation.cc  triangulation.h
src/takram/triangulation/: delaunay_triangulator.cc  delaunay_triangulator.h  edge.h  edge_iterator.cc  edge_iterator.h  library.h  line.h  line_iterator.cc  line_iterator.h  point.h  result.cc  result.h  triangle.h  triangle_iterator.cc  triangle_iterator.h  triangulation.cc  triangulation.h  triangulator.cc  triangulator.h  triangulator_base.cc  triangulator_base.h  types.h  voronoi_triangulator.cc  voronoi_triangulator.h
src/triangulation/: delaunay_triangulator.cc  triangle_iterator.cc  triangulator_base.cc  voronoi_triangulator.cc
takram_triangulation.xcodeproj/: project.pbxproj
takram_triangulation.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
takram_triangulation.xcodeproj/xcshareddata/xcschemes/: takram_triangulation.xcscheme  takram_triangulation_shared.xcscheme  takram_triangulation_static.xcscheme  takram_triangulation_test.xcscheme
test/: test.cc
test/triangulation/: triangulation_test.cc
triangulation/: gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters  test.vcxproj  test.vcxproj.filters  triangulation.vcxproj  triangulation.vcxproj.filters
triangulation.xcodeproj/: project.pbxproj
triangulation.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
triangulation.xcodeproj/project.xcworkspace/xcshareddata/: triangulation.xcscmblueprint
triangulation.xcodeproj/xcshareddata/xcschemes/: triangulation_shared.xcscheme  triangulation_static.xcscheme  triangulation_test.xcscheme
xcode/: product.xcconfig  product_debug.xcconfig  product_release.xcconfig  product_shared.xcconfig  product_static.xcconfig  product_test.xcconfig  project.xcconfig  project_debug.xcconfig  project_release.xcconfig
